--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,9 @@
-*.properties
-/target/*
-*.iml
-.idea/
+# Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio and WebStorm
+# Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
+
+target/
+idea/
+src/main/resources/
 
 # User-specific stuff
 .idea/**/workspace.xml
