--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,6 @@ spring.datasource.username=postgres
 spring.datasource.password=a456456456
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.liquibase.enabled=false
+logging.level.root=DEBUG
+logging.level.org.springframework.web=DEBUG
+logging.level.org.hibernate=DEBUG
