--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,6 +3,7 @@ spring.datasource.username=postgres
 spring.datasource.password=a456456456
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.liquibase.enabled=false
-logging.level.root=WARN
-logging.level.org.springframework.web=WARN
-logging.level.org.hibernate=WARN
+logging.level.root=INFO
+logging.level.org.springframework.web=INFO
+logging.level.org.hibernate=INFO
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
