--- a/.gitignore
+++ b/.gitignore
@@ -4,8 +4,10 @@
 application.properties
 
 target/
-idea/
+.idea/
 src/main/resources/
+transaction-logs/
+DrinkingGame.iml
 
 # User-specific stuff
 .idea/**/workspace.xml
