player endpoints being made

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=jdbc:postgresql://localhost:5433/springtest
-spring.datasource.username=postgres
-spring.datasource.password=a456456456
+spring.datasource.url=jdbc:postgresql://localhost:5432/springtest
+spring.datasource.username=adam
+spring.datasource.password=somethingnormal
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.liquibase.enabled=false
 logging.level.root=INFO
